modified:   index.html 	modified:   styles/base.css

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <h1 class="poppins-medium">Welcome to My WDD 131 Project</h1>
+        <h1 class="poppins-medium">WDD 131 - Dynamic Web Fundamentals - Ezequiel Videla</h1>
         <nav>
             <ul class="poppins-medium">
                 <li><a href="https://www.linkedin.com/in/ezequiel-g-videla/">My LinkedIn</a></li>
@@ -23,7 +23,7 @@
         </nav>        
     </header>
     <main>
-        <div class="card">
+        <div class="card my-info">
             <img src="images/me-photo.jpeg" alt="A photo of Ezequiel Videla">
             <p class="poppins-regular">
                 Hi, I'm Ezequiel Videla, I'm from Argentina and I'm 23 years old. I like spend my time listening 
@@ -33,11 +33,16 @@
             </p>
         </div>
         <div class="card">
-            <h2>Bla bla bla</h2>
+            <h2>Check Web Tools</h2>
+            <ul>
+                <li><a href="https://www.w3schools.com/">W3schools</a></li>
+                <li><a href="https://pixabay.com/">Pixabay</a></li>
+                <li><a href="https://coolors.co/palettes/trending"></a>Coolors</li>
+            </ul>
         </div>
     </main>
     <footer class="poppins-medium">
-        <p> © </i><span id="currentyear"></span> - Ezequiel Videla - Buenos Aires</p>
+        <p> © <span id="currentyear"></span> - Ezequiel Videla - Buenos Aires</p>
         <p id="lastModified"></p>
     </footer>
 </body>
