modified:   index.html 	modified:   styles/base.css

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </nav>        
     </header>
     <main>
-        <div class="card my-info">
+        <div class="card card-my-info">
             <img src="images/me-photo.jpeg" alt="A photo of Ezequiel Videla">
             <p class="poppins-regular">
                 Hi, I'm Ezequiel Videla, I'm from Argentina and I'm 23 years old. I like spend my time listening 
@@ -32,12 +32,12 @@
                 favorite pastime.
             </p>
         </div>
-        <div class="card">
-            <h2>Check Web Tools</h2>
-            <ul>
+        <div class="card card-web-tools">
+            <h2 class="poppins-medium">Web Tools</h2>
+            <ul class="poppins-medium">
                 <li><a href="https://www.w3schools.com/">W3schools</a></li>
                 <li><a href="https://pixabay.com/">Pixabay</a></li>
-                <li><a href="https://coolors.co/palettes/trending"></a>Coolors</li>
+                <li><a href="https://coolors.co/palettes/trending">Coolors</a></li>
             </ul>
         </div>
     </main>
