new file:   images/Argentina.jpeg 	modified:   index.html 	modified:   styles/base.css

--- a/index.html
+++ b/index.html
@@ -24,13 +24,27 @@
     </header>
     <main>
         <div class="card card-my-info">
-            <img src="images/me-photo.jpeg" alt="A photo of Ezequiel Videla">
-            <p class="poppins-regular">
-                Hi, I'm Ezequiel Videla, I'm from Argentina and I'm 23 years old. I like spend my time listening 
-                music, specially I like listening indie and alternative music like Paramore or Twenty One Pilots.
-                When it comes to food, favorites include lemon pie, mate, and pizza. Sports-wise, volleyball is a 
-                favorite pastime.
-            </p>
+            <div class="img-column">
+                <img src="images/me-photo.jpeg" alt="A photo of Ezequiel Videla" class="img-me">
+                <img src="images/Argentina.jpeg" alt="Argentina flag" class="img-argentina">
+            </div>
+            <div class="info">
+                <p class="poppins-regular">
+                    Hi, I'm Ezequiel Videla, I'm from Argentina and I'm 23 years old. I like spend my time listening 
+                    music, specially I like listening indie and alternative music like Paramore or Twenty One Pilots.
+                    When it comes to food, favorites include lemon pie, mate, and pizza. Sports-wise, volleyball is a 
+                    favorite pastime.
+                </p> <br>
+                <h2 class="poppins-medium">About Argentina:</h2>
+                <p class="poppins-regular">
+                    Argentina is a country located in the southern part of Latin America, known for its rich history, 
+                    culture, and geographical diversity. Its capital, Buenos Aires, is a vibrant cultural hub, 
+                    famous for tango, its European-style architecture, and cuisine. Argentina features impressive 
+                    landscapes ranging from the vast plains of the Pampas to the majestic Andes and the lush region 
+                    of Patagonia. It is also renowned for its passion for football and mate, a traditional infusion 
+                    that is an essential part of daily life for Argentinians.
+                </p>
+            </div>
         </div>
         <div class="card card-web-tools">
             <h2 class="poppins-medium">Web Tools</h2>
