deleted:    images/Argentina.jpeg 	new file:   images/Argentina.webp 	deleted:    images/me-photo.jpeg 	new file:   images/me-photo.webp 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <main>
         <div class="card card-my-info">
             <div class="img-column">
-                <img src="images/me-photo.jpeg" alt="A photo of Ezequiel Videla" class="img-me">
-                <img src="images/Argentina.jpeg" alt="Argentina flag" class="img-argentina">
+                <img src="images/me-photo.webp" alt="A photo of Ezequiel Videla" class="img-me">
+                <img src="images/Argentina.webp" alt="Argentina flag" class="img-argentina">
             </div>
             <div class="info">
                 <p class="poppins-regular">
