--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="card card-my-info">
             <div class="img-column">
                 <img src="images/me-photo.webp" alt="A photo of Ezequiel Videla" class="img-me">
-                <img src="images/Argentina.webp" alt="Argentina flag" class="img-argentina">
+                <img src="images/Argentina.jpeg" alt="Argentina flag" class="img-argentina">
             </div>
             <div class="info">
                 <p class="poppins-regular">
