--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Meta Data -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Ezequiel Videla">
     <meta name="description" content="WDD 131 - Dynamic Web Fundamentals. I am Ezequiel Videla, a student showcasing my web development experience and technical skills.">
 
-    <title>WDD 131 - Dynamic Web Fundamentals - Ezequiel Videla</title>
+    <!-- Fonts link -->
     <link rel="stylesheet" href="styles/base.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap" rel="stylesheet">
+
+    <title>WDD 131 - Dynamic Web Fundamentals - Ezequiel Videla</title>
     <script src="scripts/getdates.js" defer></script>
 </head>
 <body>
@@ -25,8 +31,8 @@
     <main>
         <div class="card card-my-info">
             <div class="img-column">
-                <img src="images/me-photo.webp" alt="A photo of Ezequiel Videla" class="img-me">
-                <img src="images/Argentina.jpeg" alt="Argentina flag" class="img-argentina">
+                <img src="images/me-photo.jpeg" alt="A photo of Ezequiel Videla" class="img-me">
+                <img src="images/Argentina.webp" alt="Argentina flag" class="img-argentina">
             </div>
             <div class="info">
                 <p class="poppins-regular">
