modified:   week02/bom.html 	new file:   week02/images/mendoza_argentina_temple_exterior.jpeg 	modified:   week02/scripts/script.js 	new file:   week02/scripts/temples.js 	new file:   week02/styles/temples-large.css 	new file:   week02/styles/temples.css 	new file:   week02/temples.html

--- a/week02/bom.html
+++ b/week02/bom.html
@@ -19,5 +19,7 @@
         <button type="submit">Add Chapter</button>
         <ul id="list"></ul>
     </main>
+
+    <span>texto 1</span>
 </body>
 </html>
