modified:   styles/temples-large.css 	modified:   styles/temples.css 	modified:   temples.html

--- a/temples.html
+++ b/temples.html
@@ -14,10 +14,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 
     <title>WDD 131 - Album - Ezequiel Videla</title>
+
+    <script src="scripts/temples.js" defer></script>
 </head>
 <body class="bg-white txt-black">
     <header class="bg-black txt-orange">
-        <h1>WDD 131 - Album</h1>
+        <h1>Album Temples</h1>
         <button id="hamburger-btn" class="btn-burguer sm-only">☰</button>
         <nav id="nav-menu" class="sm-hidden">
             <ul>
@@ -72,7 +74,5 @@
         <p> © <span id="currentyear"></span> - Ezequiel Videla - Buenos Aires</p>
         <p id="lastModified"></p>
     </footer>
-
-    <script src="scripts/temples.js"></script>
 </body>
 </html>
