modified:   place.html 	modified:   styles/place.css

--- a/place.html
+++ b/place.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
 
-        <div class="header"> Madagascar </div>
+        <header> <h1> Madagascar </h1> </header>
 
         <div class="content">
 
