modified:   place.html

--- a/place.html
+++ b/place.html
@@ -12,9 +12,10 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="container">
 
-        <header> <h1> Madagascar </h1> </header>
+    <header> <h1> Madagascar </h1> </header>
+    <main class="container">
+
 
         <div class="content">
 
@@ -52,7 +53,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </main>
     <footer class="footer">
         ©<span id="currentyear"></span> 🍃 Rubia Magdelena Francesco 🍃 Madagascar<br>
         Last Modification: <span id="lastModified"></span>
