--- a/place.html
+++ b/place.html
@@ -9,11 +9,11 @@
 
     <link rel="stylesheet" href="styles/place.css">
     <script src="scripts/place.js" defer></script>
-    <title>Document</title>
+    <title>Weather - Argentina</title>
 </head>
 <body>
 
-    <header> <h1> Madagascar </h1> </header>
+    <header> <h1> Argentina </h1> </header>
     <main class="container">
 
 
