deleted:    images/place-background-600x900.jpg 	new file:   images/place-background-600x900.webp 	deleted:    images/place-background.jpg 	new file:   images/place-background.webp 	modified:   place.html 	modified:   place.html 	modified:   styles/place.css

--- a/place.html
+++ b/place.html
@@ -20,9 +20,9 @@
         <div class="content">
 
             <picture>
-                <source srcset="images/place-background-600x900.jpg" media="(max-width: 600px)">
-                <source srcset="images/place-background-600x900.jpg" media="(max-width: 400px)">
-                <img src="images/place-background.jpg" alt="Lemurs in Madagascar" class="hero-image">
+                <source srcset="images/place-background-600x900.webp" media="(max-width: 600px)">
+                <!-- <source srcset="images/place-background-600x900.webp" media="(max-width: 400px)"> -->
+                <img src="images/place-background.webp" alt="Lemurs in Madagascar" class="hero-image">
             </picture>
 
             <div class="card p-t-s">
