modified:   place.html 	modified:   styles/place.css

--- a/place.html
+++ b/place.html
@@ -21,7 +21,6 @@
 
             <picture>
                 <source srcset="images/place-background-600x900.webp" media="(max-width: 600px)">
-                <!-- <source srcset="images/place-background-600x900.webp" media="(max-width: 400px)"> -->
                 <img src="images/place-background.webp" alt="Lemurs in Madagascar" class="hero-image">
             </picture>
 
@@ -44,6 +43,7 @@
             <div class="card p-b-e">
                 <div class="card-title weather">
                     <h3>Weather</h3>
+                    <img src="images/weather_icon.svg" class="weather-icon d-m" alt="weather icon">
                 </div>
                 <div class="card-body">
                     <p>Temperature: 10°C</p>
