new file:   images/place-background-500x900.webp 	modified:   place.html 	modified:   styles/place.css

--- a/place.html
+++ b/place.html
@@ -20,6 +20,7 @@
         <div class="content">
 
             <picture>
+                <source srcset="images/place-background-500x900.webp" media="(max-width: 500px)">
                 <source srcset="images/place-background-600x900.webp" media="(max-width: 600px)">
                 <img src="images/place-background.webp" alt="Lemurs in Madagascar" class="hero-image">
             </picture>
