modified:   place.html

--- a/place.html
+++ b/place.html
@@ -16,7 +16,6 @@
     <header> <h1> Argentina </h1> </header>
     <main class="container">
 
-
         <div class="content">
 
             <picture>
@@ -30,14 +29,13 @@
                     <h3>Data</h3>
                 </div>
                 <div class="card-body">
-                    <p>Area: 587,041 sq km</p>
-                    <p>Population: 27,691,018</p>
-                    <p>Capital: Antananarivo</p>
-                    <p>Languages: Malagasy, French</p>
-                    <p>Currency: Malagasy Ariary</p>
-                    <p>Time Zone: UTC+3</p>
-                    <p>Calling Code: +261</p>
-                    <p>Internet TLD: .mg</p>
+                    <p>Area: 2.780.400 sq km</p>
+                    <p>Population: 45.376.763</p>
+                    <p>Capital: Buenos Aires</p>
+                    <p>Languages: Español</p>
+                    <p>Currency: Peso argentino</p>
+                    <p>Calling Code: +54</p>
+                    <p>Internet TLD: .ar</p>
                 </div>
             </div>
 
@@ -47,16 +45,16 @@
                     <img src="images/weather_icon.svg" class="weather-icon d-m" alt="weather icon">
                 </div>
                 <div class="card-body">
-                    <p>Temperature: 10°C</p>
-                    <p>Conditions: Partly Cloudy</p>
-                    <p>Wind: 5 km/h</p>
+                    <p>Temperature: 22°C</p>
+                    <p>Conditions: Sunny</p>
+                    <p>Wind: 10 km/h</p>
                     <p>Wind Chill: <span class="wind-chill"></span>°C</p>
                 </div>
             </div>
         </div>
     </main>
     <footer class="footer">
-        ©<span id="currentyear"></span> 🍃 Rubia Magdelena Francesco 🍃 Madagascar<br>
+        ©<span id="currentyear"></span> - Magdelena, Buenos Aires - Argentina<br>
         Last Modification: <span id="lastModified"></span>
     </footer>
 </body>
