--- a/form.html
+++ b/form.html
@@ -80,7 +80,7 @@
             </div>
 
             <div class="form-group">
-                <input type="submit" value="Submit" class="form-submit">
+                <input type="submit" value="submit" class="form-submit">
             </div>
         </form>
     </main>
