new file:   project/images/Wireframe-1.JPG 	new file:   project/images/Wireframe-2.JPG 	modified:   project/siteplan.html 	new file:   project/styles/siteplan.css

--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -4,30 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Site Plan: Music Studio</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            line-height: 1.6;
-            color: #333;
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 20px;
-        }
-        h1 {
-            color: #8B0000;
-            border-bottom: 2px solid #8B0000;
-        }
-        h2 {
-            color: #B22222;
-        }
-        .color-sample {
-            display: inline-block;
-            width: 20px;
-            height: 20px;
-            margin-right: 10px;
-            vertical-align: middle;
-        }
-    </style>
+    <link rel="stylesheet" href="styles/siteplan.css">
 </head>
 <body>
     <h1>Site Plan: Music Studio</h1>
@@ -72,5 +49,9 @@
     <p><strong>Montserrat:</strong> For headings and titles. This sans-serif font provides a modern, clean look that complements the professional image of the studio.</p>
     <p><strong>Open Sans:</strong> For body text and general content. This highly readable sans-serif font pairs well with Montserrat and ensures good legibility across devices.</p>
     <p><strong>Playfair Display:</strong> For special accents or quotes. This serif font can be used sparingly to add a touch of elegance and contrast to the overall design.</p>
+
+    <h2>Wireframes</h2>
+    <img src="images/Wireframe-1.JPG" alt="Wireframe Web Version">
+    <img src="images/Wireframe-2.JPG" alt="Wireframe Phone Version">
 </body>
 </html>
