modified:   project/siteplan.html 	modified:   project/styles/siteplan.css

--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -11,7 +11,7 @@
 
     <h2>Site Name</h2>
     <p><strong>Harmony Studios</strong></p>
-    <p>Reason: This name was chosen because it evokes a sense of energy and passion associated with music. The "Crimson Wave" imagery suggests a powerful, flowing sound, while "Studios" clearly indicates the nature of the business. It's memorable and aligns with our reddish color scheme.</p>
+    <p>Reason: This name was chosen because it evokes a sense of energy and passion associated with music. The "Harmony" imagery suggests a powerful, flowing sound, while "Studios" clearly indicates the nature of the business. It's memorable and aligns with our reddish color scheme.</p>
 
     <h2>Site Purpose</h2>
     <p>The Harmony Studios website will serve as a comprehensive platform to showcase the studio's services, state-of-the-art equipment, and featured artists. It will provide detailed information about the facilities, booking options, and serve as a digital portfolio to attract new clients and collaborators in the music industry. The site aims to convey the studio's professional capabilities while also capturing the creativity and passion inherent in music production.</p>
@@ -25,23 +25,23 @@
 
     <h2>Color Scheme</h2>
     <p>
-        <span class="color-sample" style="background-color: #8B0000;"></span>
+        <span class="color-sample dark-red"></span>
         <strong>Dark Red (#8B0000):</strong> For main headings and primary accents.
     </p>
     <p>
-        <span class="color-sample" style="background-color: #DC143C;"></span>
+        <span class="color-sample crimson"></span>
         <strong>Crimson (#DC143C):</strong> For secondary headings and interactive elements.
     </p>
     <p>
-        <span class="color-sample" style="background-color: #FFE4E1;"></span>
+        <span class="color-sample misty-rose"></span>
         <strong>Misty Rose (#FFE4E1):</strong> For background of certain sections.
     </p>
     <p>
-        <span class="color-sample" style="background-color: #FFFFFF;"></span>
+        <span class="color-sample white"></span>
         <strong>White (#FFFFFF):</strong> Main background and text on dark backgrounds.
     </p>
     <p>
-        <span class="color-sample" style="background-color: #333333;"></span>
+        <span class="color-sample dark-gray"></span>
         <strong>Dark Gray (#333333):</strong> For main text on light backgrounds.
     </p>
 
