modified:   project/artists.html 	new file:   project/contact-us.html 	modified:   project/index.html 	new file:   project/scripts/form.js 	modified:   project/services.html 	modified:   project/styles/styles_components.css 	modified:   project/styles/styles_layout.css

--- a/project/artists.html
+++ b/project/artists.html
@@ -47,7 +47,7 @@
                     <p class="card-artist-text">
                         Queen is a legendary British rock band led by the charismatic Freddie Mercury. Known for their powerful anthems such as "Bohemian Rhapsody" and "We Will Rock You," Queen's theatrical style and dynamic sound have made them one of the most recognizable bands of all time.
                     </p>
-                    <button class="card-artist-button t-zoom">Listen Now</button>
+                    <button class="card-artist-button t-zoom"><i class="fa-solid fa-headphones"></i> Listen Now</button>
                 </div>
 
                 <div class="card-artist-item shadow-light t-zoom">
@@ -56,7 +56,7 @@
                     <p class="card-artist-text">
                         Known for their genre-blending music that mixes alternative, pop, and hip-hop, Twenty One Pilots has captured the hearts of millions worldwide. With hits like "Stressed Out" and "Ride," they have become iconic figures in the music industry.
                     </p>
-                    <button class="card-artist-button t-zoom">Listen Now</button>
+                    <button class="card-artist-button t-zoom"><i class="fa-solid fa-headphones"></i> Listen Now</button>
                 </div>
 
                 <div class="card-artist-item shadow-light t-zoom">
@@ -65,7 +65,7 @@
                     <p class="card-artist-text">
                         One of the most influential bands in music history, The Beatles revolutionized rock and roll during the 1960s. Their timeless songs like "Hey Jude" and "Let It Be" continue to inspire generations.
                     </p>
-                    <button class="card-artist-button t-zoom">Listen Now</button>
+                    <button class="card-artist-button t-zoom"><i class="fa-solid fa-headphones"></i> Listen Now</button>
                 </div>
 
                 <div class="card-artist-item shadow-light t-zoom">
@@ -74,7 +74,7 @@
                     <p class="card-artist-text">
                         Coldplay has become one of the most successful bands of the 21st century with their atmospheric and emotional sound. Hits like "Fix You" and "Viva La Vida" have made them staples in the world of alternative rock.
                     </p>
-                    <button class="card-artist-button t-zoom">Listen Now</button>
+                    <button class="card-artist-button t-zoom"><i class="fa-solid fa-headphones"></i> Listen Now</button>
                 </div>
             </div>
         </section>
