--- a/project/services.html
+++ b/project/services.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Harmony Studios - Services</title>
-    <!-- <link rel="stylesheet" href="styles/style.css"> -->
     <link rel="stylesheet" href="styles/styles_general.css">
     <link rel="stylesheet" href="styles/styles_layout.css">
     <link rel="stylesheet" href="styles/styles_components.css">
@@ -39,7 +38,7 @@
         <!-- Detailed Services -->
         <section class="services">
             <div class="service reverse recording">
-                <img src="images/recording.webp" class="image" loading="lazy">
+                <img src="images/recording.webp" class="image shadow-light" loading="lazy">
                     <div class="text">
                     <h2>Recording</h2>
                     <p>
@@ -51,7 +50,7 @@
             </div>
           
             <div class="service mixing">
-                <img src="images/mixing.webp" class="image" loading="lazy">
+                <img src="images/mixing.webp" class="image shadow-light" loading="lazy">
                 <div class="text">
                     <h2>Mixing</h2>
                     <p>
@@ -63,7 +62,7 @@
             </div>
           
             <div class="service reverse">
-                <img src="images/mastering.webp" class="image" loading="lazy">
+                <img src="images/mastering.webp" class="image shadow-light" loading="lazy">
                 <div class="text">
                     <h2>Mastering</h2>
                     <p>
@@ -78,7 +77,7 @@
         <!-- Equipment Section -->
         <section class="equipment">
             <h2>Our Equipment</h2>
-            <img src="images/staff.webp" class="image" loading="lazy">
+            <img src="images/staff.webp" class="image shadow-light" loading="lazy">
             <div class="text">
                 <h3>State-of-the-Art Recording Gear</h3>
                 <p>
