--- a/project/contact-us.html
+++ b/project/contact-us.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles/styles_general.css">
     <link rel="stylesheet" href="styles/styles_layout.css">
     <link rel="stylesheet" href="styles/styles_components.css">
+    <link rel="stylesheet" href="styles/media-query.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <script src="scripts/form.js" defer></script>
 </head>
